@@ -197,10 +197,7 @@ NdiscCache::Entry::Entry (NdiscCache* nd)
   : m_ndCache (nd),
     m_waiting (),
     m_router (false),
-    m_reachableTimer (Timer::CANCEL_ON_DESTROY),
-    m_retransTimer (Timer::CANCEL_ON_DESTROY),
-    m_probeTimer (Timer::CANCEL_ON_DESTROY),
-    m_delayTimer (Timer::CANCEL_ON_DESTROY),
+    m_nudTimer (Timer::CANCEL_ON_DESTROY),
     m_lastReachabilityConfirmation (Seconds (0.0)),
     m_nsRetransmit (0)
 {
@@ -268,9 +265,9 @@ void NdiscCache::Entry::FunctionRetransmitTimeout ()
         }
     }
 
-  if (GetNSRetransmit () < icmpv6->MAX_MULTICAST_SOLICIT)
+  if (m_nsRetransmit < icmpv6->MAX_MULTICAST_SOLICIT)
     {
-      IncNSRetransmit ();
+      m_nsRetransmit++;
 
       icmpv6->SendNS (addr, Ipv6Address::MakeSolicitedAddress (m_ipv6Address), m_ipv6Address, m_ndCache->GetDevice ()->GetAddress ());
       /* arm the timer again */
@@ -323,8 +320,7 @@ void NdiscCache::Entry::FunctionDelayTimeout ()
   Ptr<Packet> p = icmpv6->ForgeNS (addr, m_ipv6Address, m_ipv6Address, m_ndCache->GetDevice ()->GetAddress ());
   m_ndCache->GetDevice ()->Send (p, this->GetMacAddress (), Ipv6L3Protocol::PROT_NUMBER);
 
-  ResetNSRetransmit ();
-  IncNSRetransmit ();
+  m_nsRetransmit = 1;
   StartProbeTimer ();
 }
 
@@ -334,8 +330,10 @@ void NdiscCache::Entry::FunctionProbeTimeout ()
   Ptr<Ipv6L3Protocol> ipv6 = m_ndCache->GetDevice ()->GetNode ()->GetObject<Ipv6L3Protocol> ();
   Ptr<Icmpv6L4Protocol> icmpv6 = ipv6->GetIcmpv6 ();
 
-  if (GetNSRetransmit () < icmpv6->MAX_UNICAST_SOLICIT)
+  if (m_nsRetransmit < icmpv6->MAX_UNICAST_SOLICIT)
     {
+      m_nsRetransmit++;
+
       Ipv6Address addr;
 
       if (m_ipv6Address.IsLinkLocal ())
@@ -358,7 +356,6 @@ void NdiscCache::Entry::FunctionProbeTimeout ()
           return;
         }
 
-      IncNSRetransmit ();
       /* icmpv6->SendNS (m_ndCache->GetInterface ()->GetLinkLocalAddress (), m_ipv6Address, m_ipv6Address, m_ndCache->GetDevice ()->GetAddress ()); */
       Ptr<Packet> p = icmpv6->ForgeNS (addr, m_ipv6Address, m_ipv6Address, m_ndCache->GetDevice ()->GetAddress ());
       m_ndCache->GetDevice ()->Send (p, this->GetMacAddress (), Ipv6L3Protocol::PROT_NUMBER);
@@ -379,24 +376,6 @@ void NdiscCache::Entry::SetIpv6Address (Ipv6Address ipv6Address)
   m_ipv6Address = ipv6Address;
 }
 
-uint8_t NdiscCache::Entry::GetNSRetransmit () const
-{
-  NS_LOG_FUNCTION_NOARGS ();
-  return m_nsRetransmit;
-}
-
-void NdiscCache::Entry::IncNSRetransmit ()
-{
-  NS_LOG_FUNCTION_NOARGS ();
-  m_nsRetransmit++;
-}
-
-void NdiscCache::Entry::ResetNSRetransmit ()
-{
-  NS_LOG_FUNCTION_NOARGS ();
-  m_nsRetransmit = 0;
-}
-
 Time NdiscCache::Entry::GetLastReachabilityConfirmation () const
 {
   NS_LOG_FUNCTION_NOARGS ();
@@ -411,77 +390,57 @@ void NdiscCache::Entry::UpdateLastReachabilityconfirmation ()
 void NdiscCache::Entry::StartReachableTimer ()
 {
   NS_LOG_FUNCTION_NOARGS ();
-  if (m_reachableTimer.IsRunning ())
+  if (m_nudTimer.IsRunning ())
     {
-      m_reachableTimer.Cancel ();
+      m_nudTimer.Cancel ();
     }
-  m_reachableTimer.SetFunction (&NdiscCache::Entry::FunctionReachableTimeout, this);
-  m_reachableTimer.SetDelay (MilliSeconds (Icmpv6L4Protocol::REACHABLE_TIME));
-  m_reachableTimer.Schedule ();
-}
 
-void NdiscCache::Entry::StopReachableTimer ()
-{
-  NS_LOG_FUNCTION_NOARGS ();
-  m_reachableTimer.Cancel ();
+  m_nudTimer.SetFunction (&NdiscCache::Entry::FunctionReachableTimeout, this);
+  m_nudTimer.SetDelay (MilliSeconds (Icmpv6L4Protocol::REACHABLE_TIME));
+  m_nudTimer.Schedule ();
 }
 
 void NdiscCache::Entry::StartProbeTimer ()
 {
   NS_LOG_FUNCTION_NOARGS ();
-  if (m_probeTimer.IsRunning ())
+  if (m_nudTimer.IsRunning ())
     {
-      m_probeTimer.Cancel ();
+      m_nudTimer.Cancel ();
     }
-  m_probeTimer.SetFunction (&NdiscCache::Entry::FunctionProbeTimeout, this);
-  m_probeTimer.SetDelay (MilliSeconds (Icmpv6L4Protocol::RETRANS_TIMER));
-  m_probeTimer.Schedule ();
+  m_nudTimer.SetFunction (&NdiscCache::Entry::FunctionProbeTimeout, this);
+  m_nudTimer.SetDelay (MilliSeconds (Icmpv6L4Protocol::RETRANS_TIMER));
+  m_nudTimer.Schedule ();
 }
-
-void NdiscCache::Entry::StopProbeTimer ()
-{
-  NS_LOG_FUNCTION_NOARGS ();
-  m_probeTimer.Cancel ();
-  ResetNSRetransmit ();
-}
-
 
 void NdiscCache::Entry::StartDelayTimer ()
 {
   NS_LOG_FUNCTION_NOARGS ();
-  if (m_delayTimer.IsRunning ())
+  if (m_nudTimer.IsRunning ())
     {
-      m_delayTimer.Cancel ();
+      m_nudTimer.Cancel ();
     }
-  m_delayTimer.SetFunction (&NdiscCache::Entry::FunctionDelayTimeout, this);
-  m_delayTimer.SetDelay (Seconds (Icmpv6L4Protocol::DELAY_FIRST_PROBE_TIME));
-  m_delayTimer.Schedule ();
-}
-
-void NdiscCache::Entry::StopDelayTimer ()
-{
-  NS_LOG_FUNCTION_NOARGS ();
-  m_delayTimer.Cancel ();
-  ResetNSRetransmit ();
+  m_nudTimer.SetFunction (&NdiscCache::Entry::FunctionDelayTimeout, this);
+  m_nudTimer.SetDelay (Seconds (Icmpv6L4Protocol::DELAY_FIRST_PROBE_TIME));
+  m_nudTimer.Schedule ();
 }
 
 void NdiscCache::Entry::StartRetransmitTimer ()
 {
   NS_LOG_FUNCTION_NOARGS ();
-  if (m_retransTimer.IsRunning ())
+  if (m_nudTimer.IsRunning ())
     {
-      m_retransTimer.Cancel ();
+      m_nudTimer.Cancel ();
     }
-  m_retransTimer.SetFunction (&NdiscCache::Entry::FunctionRetransmitTimeout, this);
-  m_retransTimer.SetDelay (MilliSeconds (Icmpv6L4Protocol::RETRANS_TIMER));
-  m_retransTimer.Schedule ();
+  m_nudTimer.SetFunction (&NdiscCache::Entry::FunctionRetransmitTimeout, this);
+  m_nudTimer.SetDelay (MilliSeconds (Icmpv6L4Protocol::RETRANS_TIMER));
+  m_nudTimer.Schedule ();
 }
 
-void NdiscCache::Entry::StopRetransmitTimer ()
+void NdiscCache::Entry::StopNudTimer ()
 {
   NS_LOG_FUNCTION_NOARGS ();
-  m_retransTimer.Cancel ();
-  ResetNSRetransmit ();
+  m_nudTimer.Cancel ();
+  m_nsRetransmit = 0;
 }
 
 void NdiscCache::Entry::MarkIncomplete (Ptr<Packet> p)
@@ -573,7 +532,7 @@ Address NdiscCache::Entry::GetMacAddress () const
 
 void NdiscCache::Entry::SetMacAddress (Address mac)
 {
-  NS_LOG_FUNCTION (this << mac);
+  NS_LOG_FUNCTION (this << mac << int(m_state));
   m_macAddress = mac;
 }
 
